Log on and Registration added
Log on is currently buggy and needs fixing

--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -17,6 +17,8 @@
     <string name="title_activity_library">Library</string>
     <string name="title_activity_registration">Registration</string>
     <string name="name">Name</string>
+    <string name="button_login">Log in</string>
+    <string name="Registration">Register</string>
 
 
     <string name="borrow_button_text">Borrow</string>
