--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,5 +8,32 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="teamduke.collegecompanion.RegistrationActivity">
 
+    <android.support.v7.widget.CardView
+        xmlns:card_view = "http://schemas.android.com/apk/res-auto"
+        style="@style/Card_Welcome"
+        card_view:cardCornerRadius="5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Student Registration"
+            android:textColor="#000"
+            android:textSize="25dp"
+            />
+
+        <TextView
+            style="@style/Card_text_register_text"/>
+
+        <Button
+            style="@style/Card_Button_Resgister"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="Access_camera"
+            android:layout_gravity="bottom|end"
+            android:text="@string/Registration"
+            />
+
+    </android.support.v7.widget.CardView>
+
 
 </RelativeLayout>
