--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,36 @@
 <resources>
 
+
+
+    <style name="Card_Button_login">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:textColor">@color/theme_accent_light</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <style name="Card_text_register_text">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_marginTop">50dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:text">Would you like to register for a lesson?</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">top|start</item>
+    </style>
+
+
+    <style name="Card_Button_Resgister">
+        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_gravity">bottom|end</item>
+        <item name="android:text">Would you like to register?</item>
+        <item name="android:textColor">@color/theme_accent_light</item>
+        <item name="android:background">@android:color/transparent</item>
+
+    </style>
+
     <style name="Card_Welcome" >
         <item name="android:layout_height"> 200dp </item>
         <item name="android:layout_width">match_parent </item>
