--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,8 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         style ="@style/Card_Home"
         card_view:cardCornerRadius="5dp"
-        android:onClick="Open_StudentCard">
+        android:onClick="Open_StudentCard"
+        >
         <TextView
             style="@style/Card_Home_Title"
             android:text="@string/Student_Card_Title"/>
