--- a/app/src/main/res/layout/activity_student_card.xml
+++ b/app/src/main/res/layout/activity_student_card.xml
@@ -55,11 +55,10 @@
         android:id="@+id/Name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="aaaaaa aaaaaaa"
         style="@style/FullscreenText"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="100dp"
-        android:layout_marginLeft="90dp"
+        android:layout_marginLeft="70dp"
         android:textColor="#000"
         />
 
@@ -74,10 +73,9 @@
         android:layout_marginRight="20dp"/>
 
     <TextView
-        android:id="@+id/DOB"
+        android:id="@+id/Dob"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00/00/0000"
         style="@style/FullscreenText"
         android:layout_gravity="bottom|center"
         android:layout_marginBottom="70dp"
@@ -97,7 +95,7 @@
         android:id="@+id/studentNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="000000"
+
         android:textColor="#000"
         style="@style/FullscreenText"
         android:layout_gravity="bottom|center"
